fix: hide modal visibilyty logic, remove buttons from modal, add small close button iinstead

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,18 +4,24 @@
 }
 
 .modal {
-  @apply max-w-[700px] max-h-[350px] w-full h-full flex flex-col justify-between items-center bg-[#060404] rounded-lg border border-solid border-[#414141] p-[2em];
+  @apply relative max-w-[30%] flex flex-col gap-5 justify-between items-center bg-[#060404] rounded-lg border border-solid border-[#414141] p-[2em];
   h2 {
-    @apply font-medium text-2xl text-center;
+    @apply font-medium text-xl text-center;
   }
   p {
-    @apply text-center text-lg;
+    @apply text-center;
   }
   animation: smoothAppear 0.3s;
 }
 
-.buttonsContainer {
-  @apply w-full flex justify-end gap-[1em];
+.closeButton {
+  @apply absolute top-4 right-4 cursor-pointer;
+  &:hover {
+    path {
+      @apply transition-all;
+      stroke: #ac403e;
+    }
+  }
 }
 
 .successBorder {
